[blink] Use TaskRunnerTimer in GenericEventQueue.

Do not use default timer implementation in generic event queue and
require a task type to be passed in GenericEventQueue::Create.

R=haraken@chromium.org

BUG=742859

Change-Id: I0de9721a92b4848b88791d09c4ac04af2aeb95ab